fixed tag permalinks

--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,10 @@ kramdown:
     css_class: 'highlight'
 
 jekyll-archives:
-  enabled: all
+  enabled: 
+    - tags
   layout: archive
   permalinks:
-    year    : /notes/:year/
-    month   : /notes/:year/:month/
-    day     : /notes/:year/:month/:day/
     tag     : /notes/tag/:name/
 
 plugins:
